// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header headers renders correctly for logged out user 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-aXZVg lhKbmH"
      >
        <nav
          class="sc-gEvEer eiCYYm"
        >
          <div
            class="sc-dcJsrY yrNFI"
          >
            <div
              class="sc-tagGq kwBrw"
            >
              <span />
            </div>
            <img
              alt="Finders logo"
              class="sc-fqkvVR fVIsRy"
              src="Finder.svg"
            />
          </div>
          <div
            class="sc-iGgWBj cpqCjJ"
          >
            <div
              class="sc-bmzYkS fkBqwy"
            >
              <span />
              <p
                style="font-family: Roboto, Arial, sans-serif; font-weight: 500; font-size: 1rem; line-height: 1rem; color: rgb(2, 113, 225);"
              >
                App
              </p>
            </div>
            <div>
              <div
                class="sc-cwHptR RUXrT"
              >
                <div
                  class="sc-jEACwC bjXzFf"
                >
                  <span />
                  <input
                    class="sc-cPiKLX TSGZv"
                    data-testid="SearchBarInput"
                    placeholder="Search"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-feUZmu doXeFE"
            >
              <div
                class="sc-fHjqPf kwXyHW"
              >
                <button
                  aria-label="more than 99 notifications"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiBadge-root css-ui7n8a-MuiBadge-root"
                  >
                    <span />
                    <span
                      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorError css-to4x1n-MuiBadge-badge"
                    >
                      2
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="sc-gsFSXq dFhXeg"
            >
              <button
                class="sc-kpDqfm sc-dAlyuH AHXat gvBhsO"
                style="font-weight: 600;"
              >
                Log in
              </button>
              <button
                class="sc-kpDqfm kBKlPr"
                style="font-weight: 600;"
              >
                Join
              </button>
            </div>
          </div>
        </nav>
        <div
          class="sc-eqUAAy iNvBfU"
        >
          <div
            class="sc-kAyceB dxBABw"
          >
            <h1
              style="font-family: Roboto, Arial, sans-serif; font-weight: 700; font-size: 53px; line-height: 55px; color: rgb(36, 42, 47); text-align: center;"
            >
              Start making better money decisions right now
            </h1>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-aXZVg lhKbmH"
    >
      <nav
        class="sc-gEvEer eiCYYm"
      >
        <div
          class="sc-dcJsrY yrNFI"
        >
          <div
            class="sc-tagGq kwBrw"
          >
            <span />
          </div>
          <img
            alt="Finders logo"
            class="sc-fqkvVR fVIsRy"
            src="Finder.svg"
          />
        </div>
        <div
          class="sc-iGgWBj cpqCjJ"
        >
          <div
            class="sc-bmzYkS fkBqwy"
          >
            <span />
            <p
              style="font-family: Roboto, Arial, sans-serif; font-weight: 500; font-size: 1rem; line-height: 1rem; color: rgb(2, 113, 225);"
            >
              App
            </p>
          </div>
          <div>
            <div
              class="sc-cwHptR RUXrT"
            >
              <div
                class="sc-jEACwC bjXzFf"
              >
                <span />
                <input
                  class="sc-cPiKLX TSGZv"
                  data-testid="SearchBarInput"
                  placeholder="Search"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="sc-feUZmu doXeFE"
          >
            <div
              class="sc-fHjqPf kwXyHW"
            >
              <button
                aria-label="more than 99 notifications"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiBadge-root css-ui7n8a-MuiBadge-root"
                >
                  <span />
                  <span
                    class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorError css-to4x1n-MuiBadge-badge"
                  >
                    2
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="sc-gsFSXq dFhXeg"
          >
            <button
              class="sc-kpDqfm sc-dAlyuH AHXat gvBhsO"
              style="font-weight: 600;"
            >
              Log in
            </button>
            <button
              class="sc-kpDqfm kBKlPr"
              style="font-weight: 600;"
            >
              Join
            </button>
          </div>
        </div>
      </nav>
      <div
        class="sc-eqUAAy iNvBfU"
      >
        <div
          class="sc-kAyceB dxBABw"
        >
          <h1
            style="font-family: Roboto, Arial, sans-serif; font-weight: 700; font-size: 53px; line-height: 55px; color: rgb(36, 42, 47); text-align: center;"
          >
            Start making better money decisions right now
          </h1>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header renders correctly 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="sc-aXZVg fRtWVR"
      >
        <nav
          class="sc-gEvEer eiCYYm"
        >
          <div
            class="sc-dcJsrY yrNFI"
          >
            <div
              class="sc-eBMEME hmSOMb"
            >
              <span />
            </div>
            <img
              alt="Finders logo"
              class="sc-fqkvVR fVIsRy"
              src="Finder.svg"
            />
          </div>
          <div
            class="sc-iGgWBj cpqCjJ"
          >
            <div
              class="sc-bmzYkS fkBqwy"
            >
              <span />
              <p
                style="font-family: Roboto, Arial, sans-serif; font-weight: 500; font-size: 1rem; line-height: 1rem; color: rgb(2, 113, 225);"
              >
                App
              </p>
            </div>
            <div>
              <div
                class="sc-cwHptR RUXrT"
              >
                <div
                  class="sc-jEACwC bjXzFf"
                >
                  <span />
                  <input
                    class="sc-cPiKLX TSGZv"
                    data-testid="SearchBarInput"
                    placeholder="Search"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="sc-feUZmu doXeFE"
            >
              <div
                class="sc-fHjqPf kwXyHW"
              >
                <button
                  aria-label="more than 99 notifications"
                  class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiBadge-root css-ui7n8a-MuiBadge-root"
                  >
                    <span />
                    <span
                      class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorError css-to4x1n-MuiBadge-badge"
                    >
                      2
                    </span>
                  </span>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <div
              class="sc-gsFSXq dFhXeg"
            >
              <button
                class="sc-kpDqfm sc-dAlyuH AHXat gvBhsO"
                style="font-weight: 600;"
              >
                Log in
              </button>
              <button
                class="sc-kpDqfm kBKlPr"
                style="font-weight: 600;"
              >
                Join
              </button>
            </div>
          </div>
        </nav>
        <div
          class="sc-eqUAAy iNvBfU"
        >
          <div
            class="sc-kAyceB dxBABw"
          >
            <h1
              style="font-family: Roboto, Arial, sans-serif; font-weight: 700; font-size: 53px; line-height: 55px; color: rgb(36, 42, 47); text-align: center;"
            >
              Start making better money decisions right now
            </h1>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-aXZVg fRtWVR"
    >
      <nav
        class="sc-gEvEer eiCYYm"
      >
        <div
          class="sc-dcJsrY yrNFI"
        >
          <div
            class="sc-eBMEME hmSOMb"
          >
            <span />
          </div>
          <img
            alt="Finders logo"
            class="sc-fqkvVR fVIsRy"
            src="Finder.svg"
          />
        </div>
        <div
          class="sc-iGgWBj cpqCjJ"
        >
          <div
            class="sc-bmzYkS fkBqwy"
          >
            <span />
            <p
              style="font-family: Roboto, Arial, sans-serif; font-weight: 500; font-size: 1rem; line-height: 1rem; color: rgb(2, 113, 225);"
            >
              App
            </p>
          </div>
          <div>
            <div
              class="sc-cwHptR RUXrT"
            >
              <div
                class="sc-jEACwC bjXzFf"
              >
                <span />
                <input
                  class="sc-cPiKLX TSGZv"
                  data-testid="SearchBarInput"
                  placeholder="Search"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="sc-feUZmu doXeFE"
          >
            <div
              class="sc-fHjqPf kwXyHW"
            >
              <button
                aria-label="more than 99 notifications"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-78trlr-MuiButtonBase-root-MuiIconButton-root"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiBadge-root css-ui7n8a-MuiBadge-root"
                >
                  <span />
                  <span
                    class="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRight MuiBadge-anchorOriginTopRightRectangular MuiBadge-overlapRectangular MuiBadge-colorError css-to4x1n-MuiBadge-badge"
                  >
                    2
                  </span>
                </span>
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="sc-gsFSXq dFhXeg"
          >
            <button
              class="sc-kpDqfm sc-dAlyuH AHXat gvBhsO"
              style="font-weight: 600;"
            >
              Log in
            </button>
            <button
              class="sc-kpDqfm kBKlPr"
              style="font-weight: 600;"
            >
              Join
            </button>
          </div>
        </div>
      </nav>
      <div
        class="sc-eqUAAy iNvBfU"
      >
        <div
          class="sc-kAyceB dxBABw"
        >
          <h1
            style="font-family: Roboto, Arial, sans-serif; font-weight: 700; font-size: 53px; line-height: 55px; color: rgb(36, 42, 47); text-align: center;"
          >
            Start making better money decisions right now
          </h1>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
